[package]
name = "kbar"
version = "0.1.0"
edition = "2021"
authors = ["Floki prajnastra.dev@gmail.com"]
homepage = "https://crates.io/crates/kbar"
repository = "https://github.com/prajnastra/kbar"
documentation = "https://docs.rs/kbar/latest/kbar"
license = "MIT"
readme = "README.md"
description = "A progress bar for cli"
keywords = ["progrss", "bar", "cli"]
categories = ["development-tools"]

[dependencies]
crossterm = { version="0.22.1", optional=true }
better_term = "1.0.4"

[features]
default = ["crossterm"]
