[package]
name = "kbar"
version = "0.1.2"
edition = "2021"
authors = ["prajnastra prajnastra.dev@gmail.com"]
homepage = "https://crates.io/crates/kbar"
repository = "https://github.com/prajnastra/kbar"
documentation = "https://docs.rs/kbar/latest/kbar"
license = "MIT"
readme = "README.md"
description = "A progress bar for cli"
keywords = ["progrss", "bar", "cli"]
categories = ["development-tools"]

[dependencies]
terminal_size = "0.1"
